--- a/_posts/2013-12-25-elm.md
+++ b/_posts/2013-12-25-elm.md
@@ -8,7 +8,7 @@ categories: []
 ![Some other roguelike](http://i.imgur.com/CsLg22Z.png "Totally not
 Enchantments of Elm")
 
-TLDR: I'm making a game in a browser based functional language called Elm. Here's a simple Hello World-type [demo](/part1.elm.html).
+TL;DR: I'm making a game in a browser based functional language called Elm. Here's a simple Hello World-type [demo](/part1.elm.html).
 
 Inspired by [purely functional retro
 games](http://prog21.dadgum.com/23.html)
