--- a/_posts/2014-02-26-pmarca.md
+++ b/_posts/2014-02-26-pmarca.md
@@ -22,13 +22,14 @@ Markdown file (Marc-down file?)
 First we use `twitter` module to OAuth authenticate with Twitter. Despite the
 un-Pythonic method names, this module is quite pleasant to use.
 
-
+```python
     import twitter
     import json
     
     api = twitter.Api(access_token_key="REDACTED",
                       access_token_secret="REDACTED",
                       consumer_key='REDACTED', consumer_secret='REDACTED')
+```
 
 The Twitter API doesn't actually provide a way to retrieve every tweet a user
 has created. Instead, we have to manually iterate over batches of tweets in
@@ -37,6 +38,7 @@ most recent statuses. While not ideal, it should be good enough for a quick
 demo.
 
 
+```python
     def get_all_user_tweets(user):
         tweets = []
         offset = 0
@@ -51,6 +53,7 @@ demo.
         return [tweet.AsDict() for tweet in tweets]
     
     tweets = get_all_user_tweets("pmarca")
+```
 
 ## Batching the tweets
 
@@ -60,6 +63,7 @@ the next job is therefore to detect batches of tweets posted in quick
 succession.
 
 
+```python
     import dateutil.parser
     
     def diff_created_at(a, b):
@@ -76,6 +80,7 @@ succession.
                 curr_batch = []
         batches.append(curr_batch)
         return batches
+```
 
 The `batch_tweets` function above takes a `rapidness` parameter, which is the
 maximum time between tweets to them be considered part of the same batch. There
@@ -87,9 +92,10 @@ Finally, we want to toss out batches of only 1 tweet long because we are only
 interested in Marc's "longform" Twitter content.
 
 
+```python
     batches = batch_tweets(tweets, 240)
     rants = [batch for batch in batches if len(batch) > 1]
-
+```
 ## Generating titles using NLTK
 
 What good are these pseudo blog posts without pseudo titles? Let's generate some
@@ -103,6 +109,7 @@ not perfect, many topics that Marc tweets about are noun phrases, such as
 generate a parse tree out of a sequence of tokens and retrieve the noun phrases.
 
 
+```python
     import nltk
     from nltk.corpus import stopwords
     from nltk.tokenize import word_tokenize
@@ -120,6 +127,7 @@ generate a parse tree out of a sequence of tokens and retrieve the noun phrases.
         tree = chunker.parse(postoks)
         terms = leaves(tree)
         return terms
+```
 
 ## Outputting the "Marc"down
 
@@ -128,6 +136,7 @@ pseudo-titles and writing them to a file. If an interesting title couldn't be
 found, it simply outputs "Idea #XYZ".
 
 
+```python
     import itertools
     
     with open("rants.md", "w") as f:
@@ -149,6 +158,7 @@ found, it simply outputs "Idea #XYZ".
                 f.write("\n\n")
             f.write("\n")
             rant_count += 1
+```
 
 So how did it turn out? [Take a look for yourself here](/rants.html). The
 batching turned out to be fairly accurate in grouping together Marc's tweets
