--- a/_posts/2014-02-26-pmarca.md
+++ b/_posts/2014-02-26-pmarca.md
@@ -1,11 +1,11 @@
 --- 
 layout: post
-title: "Organizing Marc Andreesen's Thoughts Using Python and NLTK"
+title: "Organizing Marc Andreessen's Thoughts Using Python and NLTK"
 published: true
 categories: []
 ---
 
-Marc Andreesen is one of my role models and favorite thought leaders in
+Marc Andreessen is one of my role models and favorite thought leaders in
 entrepreneurship. Back in simpler times, he used to write a [blog of sagely
 startup advice](http://pmarchive.com/).  But since joining Twitter, Marc now
 shares his thoughts in small bursts of related tweets, forcing me to read his
@@ -141,7 +141,7 @@ import itertools
 
 with open("rants.md", "w") as f:
     rant_count = 1
-    f.write("# The Tweets of Marc Andreesen \n")
+    f.write("# The Tweets of Marc Andreessen \n")
     for rant in rants:
         tokens =  list(itertools.chain(*[word_tokenize(t["text"]) for t in rant]))
         filtered_tokens = [t for t in tokens if t.lower() not in stopwords]
